# priori

./: .dockerignore  .gitignore  CURRENT_STATE.md  Dockerfile  KNOWN_ISSUES.md  MILESTONES.md  Makefile  README.md  pyproject.toml  render.yaml
.codex/: render-target.json
delivery/: CONTROLLER_PROTOCOL.md  ledger.jsonl  status.yaml
docs/: BETA_1B_COMPREHENSION_POLISH_REPORT.md  CAR_NORTH_STAR.md  CASE_STUDY.md  CI.md  DEPLOY_RENDER.md  EVIDENCE_RETENTION_POLICY.md  SCOUTING_QUESTION_BANK.md  TACTICAL_QUERY_ARCHITECTURE_AND_STANDARD_LIBRARY.md
review-packets/: afl-g0-scp-0e1-local-gate-2026-06-23.zip.sha256  beta1c-live-attested-workbench-2026-06-23.zip.sha256  beta1c1-required-evidence-closure-2026-06-23.zip.sha256  m1-1s-final-architecture-review-2026-06-20.zip.sha256  m1-1s-gate-s3r-delta-2026-06-20.zip.sha256  m1-1s-gate-s3r2-delta-2026-06-20.zip.sha256  m1-1s-gate-s3r3-delta-2026-06-20.zip.sha256  m1-1s-gate-s3r4-delta-2026-06-20.zip.sha256  m1-1s-gate-s4-rule-emission-2026-06-20.zip.sha256  m1-1s-gate-s7r-relation-coverage-2026-06-20.zip.sha256  m1-1s-gate-s7r2-final-unblock-2026-06-20.zip.sha256  m1-1s-gates-s1-s3-2026-06-20.zip.sha256  m1-2-s0-s1-manual-workshop-2026-06-20.zip.sha256  m1-2-s0r-s1r-agent-boundary-2026-06-21.zip.sha256  m1-2-s0r2-trust-boundary-2026-06-21.zip.sha256  m1-2-s0r3-target-retry-safety-2026-06-21.zip.sha256  m1-2-s2-hermes-compiler-shell-2026-06-21.zip.sha256  m1-2-s2b-model-backed-hermes-2026-06-21.zip.sha256  m1-2-s2c-agent-identity-strict-eval-2026-06-21.zip.sha256  m1-2-s2d-sealed-run-review-2026-06-21.zip.sha256  (+13 more)
(+1254 files in other folders)
