[project]
name = "priori-tactical-evidence"
version = "0.1.0"
description = "Independent tactical evidence demo using public IDSSE/DFL data."
requires-python = ">=3.12,<3.13"
dependencies = [
  "floodlight==1.2.0",
  "lxml>=5.3,<6",
  "mcp>=1.24,<2",
  "pandas>=2.3,<3",
  "pillow>=12,<13",
  "pyarrow==24.0.0",
  "pydantic==2.12.5",
  "PyYAML>=6.0,<7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
